Fixed bug #67856 (Leak when using array_reduce with by-ref function)